--- a/iletisim.html
+++ b/iletisim.html
@@ -93,7 +93,7 @@
                 <div class="row mb-3">
                     <div class="col-md-1">
                         <a href="https://www.instagram.com">
-                            <img src="images/instagram.png" alt="instagram">
+                            <img src="instagram.png" alt="instagram">
                         </a>
                     </div>
                     <div class="col-md-5">
@@ -106,7 +106,7 @@
 
                     <div class="col-md-1">
                         <a href="https://www.google.com/intl/tr/gmail/about">
-                            <img style="height: 40px; "src="images/gmail.png" alt="gmail">
+                            <img style="height: 40px; "src="gmail.png" alt="gmail">
                         </a>
                     </div>
                     <div class="col-md-5">
@@ -121,7 +121,7 @@
                 <div class="row mb-3">
                     <div class="col-md-1">
                         <a href="https://www.linkedin.com/home">
-                            <img src="images/linkedin.png" alt="LinkedIn">
+                            <img src="linkedin.png" alt="LinkedIn">
                         </a>
                     </div>
                     <div class="col-md-5">
@@ -133,7 +133,7 @@
                     </div>
                     <div class="col-md-1">
                         <a href="https://github.com/">
-                            <img src="images/github.png" alt="Github">
+                            <img src="github.png" alt="Github">
                         </a>
                     </div>
                     <div class="col-md-5">
