--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="images/img1.jpg" class="d-block w-100" alt="img1">
+                    <img src="img1.jpg" class="d-block w-100" alt="img1">
                   </div>
                   <div class="carousel-item">
-                    <img src="images/img2.jpg" class="d-block w-100" alt="img2">
+                    <img src="img2.jpg" class="d-block w-100" alt="img2">
                   </div>
                   <div class="carousel-item">
-                    <img src="images/img3.jpg" class="d-block w-100" alt="img3">
+                    <img src="img3.jpg" class="d-block w-100" alt="img3">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
