--- a/hakkimda.html
+++ b/hakkimda.html
@@ -113,7 +113,7 @@
             <div class="row mt-5 mb-5">
                 <h3 style="margin-bottom: 25px;">Hakkımda</h3>
                 <p>
-                    Merhaba, ben Hasan İnönü Üniveritesi Yazılım Mühendisliği lisans öğrencisiyim. 
+                    Merhaba, ben Hasan Kırklareli Üniveritesi Yazılım Mühendisliği lisans öğrencisiyim. 
                     Bu sayfamda sizlere yazılım dünyasının nasıl bir sektör olduğunu bu sektörde barınabilmek
                     için hangi niteliklere sahip olmanız gerektiğini, hangi yazılım dillerini bilmeniz gerektiğini
                     ve işinize yarayacağını düşündüğüm birçok bilgiyi elimden geldiğince sizlere aktarmaya çalıştım.
